--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 										</h2>
 										<h3>Especialização em Animação</h3>
 									</hgroup>
-									<p>01/2013-12/2014</p>
+									<p>01/2013 - 12/2014</p>
 									<span class="boxIcone iconePb" id="iconeAnimacao"></span>
 								</div>
 								<div class="boxBranco">
@@ -374,7 +374,7 @@
 										<h2>Ensino Superior - <a target="_blank" href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53">Uninove</a></h2>
 										<h3>Tecnólogo em Sistemas para Internet</h3>
 									</hgroup>
-									<p>08/2010-12/2012</p>
+									<p>08/2010 - 12/2012</p>
 									<span class="boxIcone iconePb" id="iconeInternet"></span>
 								</div>
 								<div class="boxBranco">
@@ -394,7 +394,7 @@
 										<h2><a href="http://foster.com.br/" target="_blank">Agência Foster</a> - WPP Company</h2>
 										<h3>Desenvolvedor Front-End Jr.</h3>
 									</hgroup>
-									<p class="dataExp">2011-2014</p>
+									<p class="dataExp">2011 - 2014</p>
 									<p class="infoExp">
 										Desenvolvimento e manutenção de páginas Web através dos conhecimentos em programação Web. 
 										Aplicação de treinamentos e atendimento ao cliente.
@@ -433,7 +433,7 @@
 										<h2>Autônomo</h2>
 										<h3>Web Designer</h3>
 									</hgroup>
-									<p class="dataExp">2009-2011</p>
+									<p class="dataExp">2009 - 2011</p>
 									<p class="infoExp">
 										Desenvolvimento de Web Sites personalizados para profissionais liberais, autônomos, 
 										pequenas e médias empresas com foco na qualidade e bom atendimento.
