--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<meta property="og:image:width" content="220" />
 		<meta property="og:image:height" content="220" />
 		<!-- CSS -->
-		<link rel="stylesheet" href="./style-local.css" />
+		<link rel="stylesheet" href="http://css.lucasanimador.com.br/style-local.css" />
 		<!-- JavaScript -->
 		<!--[if lt IE 9]>
 		<script type="text/javascript">
