# atualizando local das imagens e css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Desenvolvimento de sites em HTML5, CSS3 e JavaScript. Otimização para buscadores. Criação de animações e páginas interativas."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io" />
 		<meta property="og:type" content="website"/>
-		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-soares-front-end-developer.png" />
+		<meta property="og:image" content="http://images.lucasanimador.com.br/brasao-lucas-soares-front-end-developer.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="220" />
 		<meta property="og:image:height" content="220" />
@@ -35,7 +35,7 @@
 			/*  classes gerais 
 			------------------------------------------------------------------------------------------------------------------*/
 			.separaConteudo{float:left;width:100%;padding-bottom:40px}
-			.iconePb{background-image:url("http://lucasdasilvasoares.github.io/images/icones-pb-sprite.png");background-repeat:no-repeat}
+			.iconePb{background-image:url("http://images.lucasanimador.com.br/icones-pb-sprite.png");background-repeat:no-repeat}
 			.iconeExperiencia{width:100px;height:100px;background-position:-590px 0}
 			.guardaBox{float:left;background:#f0f0f0;border:8px solid #b2b2b2;position:relative}
 			.boxCinza{float:left;width:460px;padding:20px;padding-right:0;padding-bottom:30px}
@@ -80,11 +80,11 @@
 			#logoTopo a{position:relative;display:block;color:#4D4D4D}
 			#logoTopo a > span:first-child{font-size:24px;float:right}
 			#logoTopo a > span:first-child > span{float:left;padding-top:7px}
-			#logoTopo a > span:first-child > span:first-child{font-weight:bold;color:#FFF;text-align:center;width:38px;height:38px;background:url("http://lucasdasilvasoares.github.io/images/escudo-sprite.png") no-repeat;}
+			#logoTopo a > span:first-child > span:first-child{font-weight:bold;color:#FFF;text-align:center;width:38px;height:38px;background:url("http://images.lucasanimador.com.br/escudo-sprite.png") no-repeat;}
 			#logoTopo a > span#logoDesc{font-size:16px;position:absolute;top:36px;right:0}
 			#escudosTopo{float:right;padding:6px 64px 0 0}
 			#escudosTopo li{float:left;padding-left:10px}
-			#escudosTopo li a{float:left;width:38px;height:44px;background:url("http://lucasdasilvasoares.github.io/images/escudo-sprite.png") no-repeat}
+			#escudosTopo li a{float:left;width:38px;height:44px;background:url("http://images.lucasanimador.com.br/escudo-sprite.png") no-repeat}
 			#escudosTopo li #escudoHtml5{background-position:-38px 0}
 			#escudosTopo li #escudoCss3{background-position:-76px 0}
 			#escudosTopo li #escudoJs{background-position:-114px 0}
@@ -783,4 +783,4 @@
 		</script>
 	</body>
 </html>
-<link rel="stylesheet" href="./style.css" />
+<link rel="stylesheet" href="http://css.lucasanimador.com.br/style.css" />
