--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 			#guardaLinhasEscudos > div,#guardaLinhaVerde > div{margin:0 auto;position:relative;width:996px}
 
 			#guardaLinhasEscudos{z-index:10;width:100%;position:fixed}
-			#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:3000px;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y}
+			#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:0;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y;overflow:hidden}
 
 			#guardaLinhaVerde{z-index:90}
-			#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9020px;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
+			#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:0;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
 
 			/*  topo
 			------------------------------------------------------------------------------------------------------------------*/
@@ -129,8 +129,6 @@
 			#prlxOk #guardaLinhasEscudos,
 			#prlxOk #guardaLinhaVerde{position:fixed}
 			#prlxOk #guardaLinhasEscudos{height:100%;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
-			#prlxOk #linhasEscudos,
-			#prlxOk #linhaVerde{height:0;overflow:hidden}
 			#prlxOk #guardaContent{position:fixed;top:0;left:0;height:4400px}
 		</style>
 		<!-- JavaScript -->
@@ -571,7 +569,7 @@
 										<li>Parallax com JavaScript puro</li>
 										<li>Otimizar performance</li>
 										<li>Otimizar imagens</li>
-										<li>Utilizar <a target="_blank" href="./images/icones-pb-sprite.png">sprites</a></li>
+										<li>Utilizar <a target="_blank" href="http://images.lucasanimador.com.br/icones-pb-sprite.png">sprites</a></li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
