# setando meta do visor mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 		<!-- Meta -->
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
