--- a/index.html
+++ b/index.html
@@ -777,9 +777,7 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" async>
-			var aa,ab,ac=document.body,ad=function(){aa=document.createElement("script"),aa.setAttribute("type","text/javascript"),document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText))}catch(a){aa.text=ab.responseText}};window.XDomainRequest?(ab=new XDomainRequest,ab.onload=function(){ad()},ab.open("post","http://js.lucasanimador.com.br/"),ab.send()):(ab=new XMLHttpRequest,ab.onreadystatechange=function(){4==ab.readyState&&200==ab.status&&ad()},ab.open("POST","http://js.lucasanimador.com.br/",!0),ab.setRequestHeader("Content-type","application/x-www-form-urlencoded"),ab.send("h="+ac));
-		</script>
+		<script type="text/javascript" src="http://js.lucasanimador.com.br/loadScript.js" async></script>
 	</body>
 </html>
 <link rel="stylesheet" href="http://css.lucasanimador.com.br/style.css" />
