--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="http://js.lucasanimador.com.br/loadScript.js" async></script>
+		<script type="text/javascript" src="http://js.lucasanimador.com.br/loadScript.js"></script>
 	</body>
 </html>
 <link rel="stylesheet" href="http://css.lucasanimador.com.br/style.css" />
