--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			*{margin:0;padding:0;outline:none}
 			body{font:normal 16px Arial;color:#333;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
 			ol, ul {list-style: none;}
-			a{text-decoration:none;color:#064faa}
+			a{text-decoration:none;color:#064faa} 
 			a:hover{text-decoration:underline}
 			img{border:none}
 			input, textarea, form, label {font: normal 20px Arial;color:#333}
@@ -777,7 +777,9 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="http://js.lucasanimador.com.br/loadScript.js"></script>
+		<script type="text/javascript">
+			var aa,ab,ac=document.body,ad=function(){aa=document.createElement("script"),aa.setAttribute("type","text/javascript"),document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText))}catch(a){aa.text=ab.responseText}};window.XDomainRequest?(ab=new XDomainRequest,ab.onload=function(){ad()},ab.open("post","http://js.lucasanimador.com.br/"),ab.send()):(ab=new XMLHttpRequest,ab.onreadystatechange=function(){4==ab.readyState&&200==ab.status&&ad()},ab.open("POST","http://js.lucasanimador.com.br/",!0),ab.setRequestHeader("Content-type","application/x-www-form-urlencoded"),ab.send("h="+ac));
+		</script>
 	</body>
 </html>
 <link rel="stylesheet" href="http://css.lucasanimador.com.br/style.css" />
