--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 			#guardaLinhasEscudos > div,#guardaLinhaVerde > div{margin:0 auto;position:relative;width:996px}
 
 			#guardaLinhasEscudos{z-index:10;width:100%;position:fixed}
-			#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:0;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y;overflow:hidden}
+			#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:0;overflow:hidden}
 
 			#guardaLinhaVerde{z-index:90}
-			#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:0;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
+			#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:0;overflow:hidden}
 
 			/*  topo
 			------------------------------------------------------------------------------------------------------------------*/
