--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			*{margin:0;padding:0;outline:none}
 			body{font:normal 16px Arial;color:#333;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
 			ol, ul {list-style: none;}
-			a{text-decoration:none;color:#064faa} 
-			a:hover{text-decoration:underline}
+			a{text-decoration:none;color:#064faa;text-decoration:underline} 
+			a:hover{text-decoration:none}
 			img{border:none}
 			input, textarea, form, label {font: normal 20px Arial;color:#333}
 
