--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" itemscope itemtype="http://schema.org/Person">
 	<head>
 		<title>Lucas da Silva Soares - Desenvolvedor Front-End</title>
 		<!-- Favicon -->
@@ -23,6 +23,10 @@
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="220" />
 		<meta property="og:image:height" content="220" />
+		<!-- Google / Schema -->
+		<meta itemprop="name" content="Lucas da Silva Soares" />
+		<meta itemprop="description" content="Desenvolvedor Front-End em São Paulo, SP. Desenvolvimento de sites em HTML5, CSS3 e JavaScript. Otimização para buscadores. Criação de animações e páginas interativas." />
+		<meta itemprop="image" content="http://images.lucasanimador.com.br/lucas-silva-soares-foto-front-end.jpg" />
 		<!-- CSS -->
 		<style type="text/css">
 			*{margin:0;padding:0;outline:none}
