# atualização meta tags

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Google / Schema -->
 		<meta itemprop="name" content="Lucas da Silva Soares" />
 		<meta itemprop="description" content="Desenvolvedor Front-End em São Paulo, SP. Desenvolvimento de sites em HTML5, CSS3 e JavaScript. Otimização para buscadores. Criação de animações e páginas interativas." />
-		<meta itemprop="image" content="http://images.lucasanimador.com.br/lucas-silva-soares-foto-front-end.jpg" />
+		<meta itemprop="image" content="http://images.lucasanimador.com.br/brasao-lucas-soares-front-end-developer.png" />
 		<!-- CSS -->
 		<style type="text/css">
 			*{margin:0;padding:0;outline:none}
