--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			#guardaCabecalhoNav nav{margin:0 auto;width:996px;display:block}
 			#guardaCabecalhoNav ul{float:left;margin-left:10px;font-size:18px}
 			#guardaCabecalhoNav li{float:left;margin:0 16px}
-			#guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:3px solid #F0F0F0;padding:10px 20px 5px 20px;text-decoration:none;}
+			#guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:3px solid #F0F0F0;padding:10px 20px 5px 20px;text-decoration:none;line-height:21px}
 			#guardaCabecalhoNav a:hover{border-color:#AAA}
 			#guardaCabecalhoNav a.marcado{border-color:#079961}
 			#guardaCabecalhoNav img{float:left;padding-bottom:5px;width:16px;height:16px}
