--- a/interna.html
+++ b/interna.html
@@ -773,12 +773,11 @@
 							</ul>
 						</div>
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- Anúncio responsivo -->
+						<!-- Anúncio responsivo 2 -->
 						<ins class="adsbygoogle"
-						     style="display:block"
+						     style="display:inline-block;width:728px;height:90px"
 						     data-ad-client="ca-pub-7918735131350467"
-						     data-ad-slot="4312762033"
-						     data-ad-format="auto"></ins>
+						     data-ad-slot="4173161231"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
