--- a/interna.html
+++ b/interna.html
@@ -193,6 +193,20 @@
 							<li><a href="#contato"><span>Contato</span><span id="iconeContato" class="iconePb"></span><span class="luzMarcado"></span></a></li>
 						</ul>
 					</section>
+					
+					<section style="float:left;width:960px;text-align:center;padding:40px;">
+						
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Anúncio responsivo 2 -->
+						<ins class="adsbygoogle"
+						     style="display:inline-block;margin:0 auto;width:728px;height:90px"
+						     data-ad-client="ca-pub-7918735131350467"
+						     data-ad-slot="4173161231"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</section>
+
 					<section id="habilidades">
 						<div id="habilidadesResumo" class="separaConteudo">
 							<h1>Habilidades</h1>
@@ -772,15 +786,6 @@
 								<li><span class="iconeContato" id="iconLinkedin"></span><a target="_blank" href="http://www.linkedin.com/in/cafecomlucas">linkedin.com/in/cafecomlucas</a></li>
 							</ul>
 						</div>
-						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- Anúncio responsivo 2 -->
-						<ins class="adsbygoogle"
-						     style="display:inline-block;width:728px;height:90px"
-						     data-ad-client="ca-pub-7918735131350467"
-						     data-ad-slot="4173161231"></ins>
-						<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
-						</script>
 					</section>
 				</div>				
 			</div>		
