--- a/interna.html
+++ b/interna.html
@@ -194,7 +194,7 @@
 						</ul>
 					</section>
 					
-					<section style="float:left;width:960px;text-align:center;padding:40px;">
+					<section style="float:left;width:960px;text-align:center;padding:40px 0 40px 30px;">
 						
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- Anúncio responsivo 2 -->
