--- a/index.html
+++ b/index.html
@@ -195,11 +195,10 @@
 					</section>
 					
 					<section style="float:left;width:960px;text-align:center;padding:40px 0 40px 30px;">
-						
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- Anúncio responsivo 2 -->
 						<ins class="adsbygoogle"
-						     style="display:inline-block;margin:0 auto;width:728px;height:90px"
+						     style="display:inline-block;width:728px;height:90px"
 						     data-ad-client="ca-pub-7918735131350467"
 						     data-ad-slot="4173161231"></ins>
 						<script>
